Closed
Bug 13551
Opened 26 years ago
Closed 26 years ago
Account Manager Twisties not present for accounts
Categories
(SeaMonkey :: MailNews: Account Configuration, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
M11
People
(Reporter: nbaca, Assigned: alecf)
References
Details
Attachments
(1 file)
980 bytes,
patch
|
Details | Diff | Splinter Review |
Build 1999090909M11: Win32/NT4, Linux/Redhat 6.0, Mac 8.5.1
Overview: Account Manager lists my accounts but not the "+" twisties. If I
double click onto the account then it shows the "-" twisty and displays the
Server and Copies panels as expected.
Expected Results: If another level is available then a "+" twisty should appear
next to the account or the panel. If another level is not present then a twisty
should not appear.
Updated•26 years ago
|
Assignee: phil → alecf
Comment 1•26 years ago
|
||
-> alecf
Assignee | ||
Updated•26 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 2•26 years ago
|
||
David/Robert - I keep seeing this, and putterman say he sees it in the thread
pane as well. putterman thought maybe it's because the thread pane and the
account manager pane don't follow the ...#child attribute for containment.
any thoughts? I'm wondering if my template is messed up:
<tree rdf:datasources="rdf:msgaccountmanager"
rdf:containment="http://home.netscape.com/NC-rdf#Settings"
onclick="parent.onAccountClick(event)" id="accounttree"
style="height: 100%"
ref="msgaccounts:/">
<template>
<rule>
<treechildren>
<treeitem uri="..."
PageTag="rdf:http://home.netscape.com/NC-rdf#PageTag">
<treerow >
<treecell indent="true"
value="rdf:http://home.netscape.com/ </treerow>
</treeitem>
</treechildren>
</rule>
</template>
<treecol style="width: 100%"
rdf:resource="http://home.netscape.com/NC-rdf <treehead>
<treerow>
<treecell value="&nameCol.label;"/>
</treerow>
</treehead>
</tree>
Assignee | ||
Comment 3•26 years ago
|
||
forgot to add scott to this.
Assignee | ||
Comment 4•26 years ago
|
||
doh! looks like my cutting/pasting failed horribly.
the two lines that are cut off just finish off the tag appropriately, missing:
1) NC-rdf#Name"/>
2) #Name"/>
Assignee | ||
Updated•26 years ago
|
Target Milestone: M12
Assignee | ||
Updated•26 years ago
|
Target Milestone: M14 → M12
Assignee | ||
Comment 5•26 years ago
|
||
Sol, please don't change the milestones of my bugs.
This is a serious usability problem.
Assignee | ||
Updated•26 years ago
|
Component: Front End → Account Manager
Assignee | ||
Comment 7•26 years ago
|
||
I think I may have found part of the problem here
nsRDFGenericBuilder::IsEmpty() is always returning false when a template is not
based on the #child arc.
Assignee | ||
Comment 8•26 years ago
|
||
yeeah! I got it!
Here's what was happening: we would have an arc, and we would verify that it was
in fact the containment arc, but then we would do a GetTarget() rather than a
GetTargets() - GetTarget() on a child arc, such as #Settings or #MessageChild
would fail because the datasource doesn't expect to answer queries like that.
My solution is to fix the RDF builder to call GetTargets() rather than
GetTarget() and then check if the returned enumerator has any values in it.
Attaching a patch for review.
Comment 9•26 years ago
|
||
if you attach the patch, i'll review it. i hate the fact that we'll have to
allocate an enumerator each time we'll be answering this query. maybe we should
figure out a better way to do this...
Assignee | ||
Comment 10•26 years ago
|
||
yeah, I'm attaching my patch but the more I think about (and the more I play
with the content generation code) the more I think GetTarget() is the right
thing after all...
Assignee | ||
Comment 11•26 years ago
|
||
Assignee | ||
Updated•26 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Target Milestone: M12 → M11
Assignee | ||
Comment 12•26 years ago
|
||
I changed my mind and fixed the mail data sources instead.
Reporter | ||
Updated•26 years ago
|
Status: RESOLVED → VERIFIED
Reporter | ||
Comment 13•26 years ago
|
||
Build 1999110208M11: Win32/NT4, Linux/Redhat 6.0, Mac 8.5.1
Verified Fixed. Twisties are there and working.
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•